@@ -501,27 +501,9 @@ Recovery
 --------
 Since training can take a long time, this increases the probability
 that external factors such as a system failure will cause a training
-run to fail before completion. Segway has options, however, that will
-allow you to pick up where training left off rather than start over,
-by using the :option:`--trainable-params` option multiple times to
-specify the intermediate parameters generated by Segway during an
-incomplete training run.
-
-You can recover from a previously completed training run by specifying
-multiple :option:`--input-master` and :option:`--trainable-params`
-files. They will be matched to each other in order. If there are more
-instances specified than master and parameter files, then new ones will
-be generated automatically for the remaining instances. The final
-parameters file is generated in *workdir*\ ``/params/params.params``
-The Helpful Commands section of this manual contains some short
-scripts useful for this process
-
-The new training run will start over with round index 0 for all
-instances, so the usual maximum of 100 rounds will take place after
-another 100 rounds rather than from the initial start.
-
-In the future, this will be replaced with :option:`--old-directory`\=\
-*dirname*.
+run to fail before completion. You can use the :option:`--recover`\=\
+*dirname* option to specify a previous work directory you're
+recovering from.
 
 Identify task
 =============
@@ -554,7 +536,7 @@ safely ignored for further processing. We use colors from ColorBrewer
 
 Recovery
 --------
-The :option:`--old-directory`\=\ *dirname* allows recovery from an
+The :option:`--recover`\=\ *dirname* allows recovery from an
 interrupted identify task. Segway will requeue jobs that never
 completed before, skipping any windows that have already completed.
 
@@ -1001,39 +983,13 @@ Helpful commands
 ================
 Here are some short bash scripts or one-liners that are useful:
 
-.. todo: this should be automated from --old-directory
-
-Generate the command-line arguments necessary to continue Segway from
-an interrupted training run using `$NUM_INSTANCES` instances::
-
-    NUM_INSTANCES=<define number of threads here>
-    OLDTRAINDIRNAME=<define old workdir here>
-    OLDTRAINSPEC="$(
-        for ((X=0; X < NUM_INSTANCES; X++)); do
-            OLDPARAMSFILENAMES=$(ls \
-                                 $OLDTRAINDIRNAME/params/params.$X.params.*
-                                 \
-                                 2>/dev/null)
-            if [ "$OLDPARAMSFILENAMES" ]; then
-                printf "%s $OLDTRAINDIRNAME/params/%s\n" -p \
-                    $(echo $OLDPARAMSFILENAMES \
-                      | xargs -n 1 basename \
-                      | sort -t . -k 4,4rn | head -n 1);
-            fi
-        done)"
-
-Then you can add `$OLDTRAINSPEC` into your Segway command-line to
-specify all of the previous parameter files as starting values.
-
-There used to be a recipe here to rename winning parameters when a
-training run is cut short, but this has been replaced by the
-:program:`segway-winner` command.
-
 Make a tarball of parameters and models from various directories::
 
     (for DIR in traindir1 traindir2; do
         echo $DIR/{auxiliary,params/input.master,params/params.params,segway.str,triangulation}
     done) | xargs tar zcvf training.params.tar.gz
+
+.. todo: include rsync-segway script
 
 Rsync parameters from `$REMOTEDIR` on `$REMOTEHOST` to `$LOCALDIR`::
 
@@ -1043,7 +999,7 @@ Print all last likelihoods::
 
     for X in likelihood.*.tab; do dc -e "8 k $(tail -n 2 $X | cut -f 1 | xargs echo | sed -e 's/-//g') sc sl ll lc - ll / p"; done
 
-.. todo: research BEDTools issue here
+.. todo: research BEDTools capability here
 
 Recover as much as possible from an incomplete identification run
 without completing it. Note that this does not combine adjacent lines
