@@ -2,10 +2,16 @@
 
 * segway: now again includes posterior output in bedGraph format
   (thanks to Avinash Sahu)
+* segway: --old-directory renamed to --recover-dir
+
+* segway: --recover-dir now supports identify as well as train. less
+  clunky and more consistent than the old recipe for training recovery
+  included in the docs
+
 * segway: train.tab is now optional, so you should be able to run
   identify on pre-Segway 1.0.0 training directories that don't have
   it, as long as you specify all the same options as you did before
-* segway-winner: new command to pick winning paramters in interrupted training run
+* segway-winner: new command to pick winning parameters in interrupted training run
 * segway: train.tab now includes input master filename in multi-instance training
 * segway: changed memory progression edge error to be more easily understandable
 * segway: when some error kills one training instance, there is now a more detailed error at end
